# fileShare

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.build  Dockerfile.ci  README.md  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: build.yml
client/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  styles.css  vite-env.d.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  main.rs
client/src/components/: ConfirmDialog.tsx  ContextMenu.tsx  DragOverlay.tsx  FileList.tsx  FileToolbar.tsx  LockStatus.tsx  components.defensive.test.tsx  components.test.tsx
client/src/hooks/: hooks.test.ts  useDragUpload.ts  useFiles.ts  useLock.ts  useSSE.ts  useSelection.ts
client/src/lib/: api.defensive.test.ts  api.test.ts  api.ts  fileIcons.ts
deploy/: fileshare-server.service  install-server.sh
docs/superpowers/specs/: 2026-07-05-fileshare-design.md
scripts/: build-client.sh  build-server.sh  gen_icons.py
server/: .env.example  Cargo.toml
server/src/: config.rs  lib.rs  main.rs  router.rs
server/src/db/: sqlite.rs
server/src/handler/: auth.rs  events.rs  files.rs  lock.rs  mod.rs
server/src/model/: file.rs  lock.rs  mod.rs
server/src/service/: file_ops.rs  file_watch.rs  lock_mgr.rs  meta_sync.rs  mod.rs
server/tests/: api_integration.rs
