[package]
name = "fileshare-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
multer = "3"
tokio-util = { version = "0.7", features = ["io"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
tempfile = "3"
notify = { version = "7", features = ["macos_kqueue"] }
tower = "0.5"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
